# TwitChaReader

./: CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  build.bat  build.sh
.github/workflows/: bui.yml
src/: chatmessage.h  chatwidget.cpp  chatwidget.h  constants.h  emotemanager.cpp  emotemanager.h  filterwidget.cpp  filterwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  notificationmanager.cpp  notificationmanager.h  settings.cpp  settings.h  statswidget.cpp  statswidget.h  twitchauth.cpp  twitchauth.h  twitchchat.cpp  twitchchat.h  userprofile.cpp  userprofile.h
